--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -76,7 +76,7 @@
   <div class="box-infos">
     <h1 class="highlight-coworking-show"><%= @coworking.title %></h1>
     <ul class="list-inline">
-      <li><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @coworking.address %> - <%= @coworking.zip_code %></li>
+      <li><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @coworking.address %></li>
       <li><i class="fa fa-building" aria-hidden="true"></i> <%= @coworking.surface %> m²</li>
       <li><i class="fa fa-desktop" aria-hidden="true"></i> <%= @coworking.workstation_number %> postes de travail</li>
     </ul>
