--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -105,7 +105,7 @@
    padding-left: 5px;
    border: 1px gray solid;
    border-radius: 5px 0 0 5px;
-   height: 40px;
+   height: 45px;
    width: 300px;
  }
 
@@ -114,7 +114,8 @@
   border-color: #29AB87;
   font-size: 12px;
   width: auto;
-  height: 40px;
+  margin-left: -6px;
+  height: 45px;
   padding: 0px 25px;
   border: 1px gray solid;
   border-radius: 0 5px 5px 0;
