--- a/app/views/coworkings/edit.html.erb
+++ b/app/views/coworkings/edit.html.erb
@@ -25,18 +25,19 @@
           </div>
           <%= f.hint "Pour le respect de vos informations, certaines données ne seront visibles qu'aux utilisateurs inscrits et confirmés " %>
         </div>
+        <h2>Tarifications</h2>
         <div class="row">
-          <div class="col-xs-3">
-            <%= f.input :price_per_month, label: "Prix au mois", placeholder: "5000€" %>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <%= f.input :price_per_month, label: "Par mois", placeholder: "5000€" %>
           </div>
-          <div class="col-xs-3">
-            <%= f.input :price_per_workstation_per_month, label: "Prix/poste/mois", placeholder: "300€" %>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <%= f.input :price_per_workstation_per_month, label: "Au poste/mois", placeholder: "300€" %>
           </div>
-          <div class="col-xs-3">
-            <%= f.input :price_per_workstation_per_day, label: "Prix/poste/jour", placeholder: "25€" %>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <%= f.input :price_per_workstation_per_day, label: "Au poste/jour", placeholder: "25€" %>
           </div>
-          <div class="col-xs-3">
-            <%= f.input :price_per_workstation_per_hour, label: "Prix/poste/heure", placeholder: "5€" %>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+            <%= f.input :price_per_workstation_per_hour, label: "Au poste/heure", placeholder: "5€" %>
           </div>
           <%= f.hint "Les prix seront affichés selon la prestation choisie par le locataire" %>
         </div>
