--- a/app/views/demand_mailer/creation_confirmation.html.erb
+++ b/app/views/demand_mailer/creation_confirmation.html.erb
@@ -2,7 +2,7 @@
 <p>Votre cahier des charges est en cours d'analyse par nos équipes.</p>
 <p>Nous vous contacterons très rapidement à l'adresse suivante <b><%= @demand.user.email %></b>.</p>
 <p>Rendez-vous sur la page de votre cahier des charges en suivant le lien suivant:</p>
-<%= link_to "voir ma demande", user_demands_url(@demand.user_id)  %>
+<%= link_to "voir ma demande", demand_url(@demand)  %>
 <p>Vous pouvez apporter des modifications directement sur le site</p>
 <p>Merci de la confiance que vous nous témoignez :)</p>
 <p>Au plaisir de vous rencontrer bientôt pour faire avancer votre projet immobilier.</p>
