--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -84,6 +84,12 @@ box-shadow: inset 0px -12px $my-green;
 font-weight: bold;
 }
 
+
+
+.container-call-action-2 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 // Cards CSS for type of company
 
 /*---------- CARDS LAYOUT ----------*/
