--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,13 +41,16 @@
 </div>
 <% end %>
 </div>
-<%= link_to coworkings_path, method: :get, class: 'form-search' do %>
-<div class="flexbox">
-  <%= submit_tag "RECHERCHER LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+<div class="container-call-action-2">
+  <div class="row">
+    <div class="col-xs-12">
+      <%= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
+      <%= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query" %>
+      <%= f.submit "Rechecher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
+      <% end %>
+    </div>
+  </div>
 </div>
-<% end %>
-
-
 <div class="home-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 80%), url('<%= image_path('parisjungle3.jpg')%>');">
 <div class="container">
   <div class="row">
