--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,7 +60,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-6"></div>
       <h2 class="highlight">Besoin d'espaces sur mesure</h2>
-      <p>Choisissez votre profil et recherchez les espaces de travail proposant d'adapter leurs locaux à vos besoins</p>
+      <p>Choisissez votre profil et envoyez-nous votre cahier des charges, un consultant se chargera de trouver pour vous les espaces les mieux adaptés</p>
   </div>
 </div>
     <ul class="cards">
