--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
         <div class="form-inputs">
           <%= f.input :first_name, required: true, autofocus: true, label: "Prénom" %>
           <%= f.input :last_name, required: true, autofocus: true, label: "Nom" %>
-          <%= f.input :phone_number, required: true, autofocus: true, label: "Numéro de téléphone" %>
+          <%= f.input :phone_number, required: true, autofocus: true, label: "Numéro de téléphone", hint: "Aucun démarchage commercial ne sera fait. Cela nous permet de faciliter les échanges si besoin" %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), label: "Mot de passe" %>
           <%= f.input :password_confirmation, required: true, label: "Confirmation du mot de passe" %>
