--- a/app/views/devise/shared/_socialnetworkslinks.html.erb
+++ b/app/views/devise/shared/_socialnetworkslinks.html.erb
@@ -1,5 +1,5 @@
 <%- if devise_mapping.omniauthable? %>
-    <ul class="list-inline text-center">
+    <ul class="list-inline text-center hidden-xs">
       <%- resource_class.omniauth_providers.each do |provider| %>
       <li><%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class:"btn btn-primary list-inline"%>
       </li>
