--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,21 +1,28 @@
 <div id="home-footer">
   <div class="container">
-    <div class="raw">
-      <div class="col-xs-12 col-sm-6 col-lg-6">
-        <ul  class="list-inline">
-          <li><%= link_to root_path, class: "footer-logo hidden-xs" do %>
-            <%= image_tag "TREJhome.png" %>
-            <% end %>
-          </li>
-          <li><a target="_blank" href="#"><i class="fa fa-linkedin-square hidden" aria-hidden="true"></i></a>
-          </li>
-          <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
-          </li>
-          <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
-          </li>
-          <li><%= link_to "Tarifs", pages_tarifs_path, class: "footer-links" %>
-          </li>
-        </ul>
+    <div class="row">
+      <div class="col-xs-12 col-md-3 col-sm-3">
+        <%= link_to root_path, class: "footer-logo hidden-xs" do %>
+          <%= image_tag "TREJhome.png" %>
+        <% end %>
+      </div>
+        <div class="row">
+          <div class="col-xs-12 col-xs-offset-1 col-md-5 col-md-offset-2 col-sm-6">
+            <ul class="list-inline">
+              <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
+              </li>
+              <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
+              </li>
+              <li><%= link_to "Tarifs", pages_tarifs_path, class: "footer-links" %>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-xs-offset-1 col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5">
+          <p>©TheRealEstateJungle</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
