--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,21 +5,21 @@
 }
 
 ul {
+margin-top: 30px;
 list-style: none;
 }
 
 #home-footer {
   background: $my-gray;
-  padding-top: 20px;
+  height: auto;
   p {
     font-size: 10px;
     color: $my-white;
   }
-}
-
-#home-footer a {
-  font-size: 15px;
-  color: $my-white;
+  a {
+    font-size: 15px;
+    color: $my-white;
+  }
 }
 
 #home-footer a:hover {
@@ -27,7 +27,8 @@ list-style: none;
 }
 
 .footer-logo img{
-  height: 100px;
+  height: 80px;
+  margin-top: 20px;
 }
 
 
