--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,9 +6,9 @@
           <%= image_tag "TREJhome.png" %>
         <% end %>
       </div>
-        <div class="row">
-          <div class="col-xs-12 col-xs-offset-1 col-md-5 col-md-offset-2 col-sm-6">
-            <ul class="list-inline">
+       <!--  <div class="row"> -->
+          <div class="col-xs-12 col-md-6 col-sm-4 col-sm-offset-1">
+            <ul class="list-inline text-center">
               <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
               </li>
               <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
@@ -17,10 +17,10 @@
               </li>
             </ul>
           </div>
-        </div>
+       <!--  </div> -->
         <div class="row">
-          <div class="col-xs-12 col-xs-offset-1 col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5">
-          <p>©TheRealEstateJungle</p>
+          <div class="col-xs-12 ">
+          <p class="text-center">©TheRealEstateJungle</p>
           </div>
         </div>
       </div>
