--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -44,7 +44,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 10px;
+  ul {
+    padding-top: 10px;
+  }
 }
 
 /* Basic navbar item */
