--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .home-container {
 background: $my-white;
 margin-top: 50px;
@@ -89,17 +94,17 @@ font-weight: bold;
 .container-call-action-2 {
   margin-top: 50px;
   margin-bottom: 50px;
-  .form-search-banner {
-
+  .form {
+    text-align: justify;
   }
 }
 
 
 .search-query:focus {
-    border-color: $my-green;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 194, 154, 0.6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 194, 154, 0.6);
+  border-color: $my-green;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 194, 154, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 194, 154, 0.6);
 }
 // Cards CSS for type of company
 
@@ -120,71 +125,69 @@ $card-radius:         0;
   padding: 0;
 }
 
-  .cards_item {
-    display: flex;
-    .no-flexbox & { float: left; }
+.cards_item {
+  display: flex;
+  .no-flexbox & { float: left; }
+  margin-top: 0px;
+  padding: 0 1em 2em;
+  // border-radius: 5px 5px 0px 0px;
+  // > 640px, 2 items/row
+  @media screen and (min-width: 42em) and ( max-width: 60em ) {
+    width: 50%;
+    .no-flexbox &:nth-child(2n+1) { clear: both; }
+  }
+  // > 960px, 3 items/row
+  @media screen and (min-width: 60em) {
+    width: 33.3333%;
+    .no-flexbox &:nth-child(3n+1) { clear: both; }
+  }
+}
 
-    margin-top: 0px;
-    padding: 0 1em 2em;
-    // border-radius: 5px 5px 0px 0px;
+.card-company-type {
+  display: flex;
+  flex-direction: column;
 
-    // > 640px, 2 items/row
-    @media screen and (min-width: 42em) and ( max-width: 60em ) {
-      width: 50%;
-      .no-flexbox &:nth-child(2n+1) { clear: both; }
+  background-color: $card-background;
+  border: $card-border-width solid $card-border-color;
+  border-radius: $card-radius;
+}
+
+  .card_image {
+    img {
+      // width: 100%;
+      // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+      // border: 1px 1px 0px 0px solid rgba(0, 0, 0, 0.1);
+      // border-radius: 5px 5px 0px 0px;
+      // -webkit-filter: brightness(1.5) contrast(1.4) hue-rotate(450deg); /* Safari 6.0 - 9.0 */
+      // filter: brightness(1.5) contrast(1.4) hue-rotate(450deg);
     }
-
-    // > 960px, 3 items/row
-    @media screen and (min-width: 60em) {
-      width: 33.3333%;
-      .no-flexbox &:nth-child(3n+1) { clear: both; }
-    }
-
   }
 
-    .card-company-type {
-      display: flex;
-      flex-direction: column;
+.card_content {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  border: 0px 1px 1px 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: -60px;
+  padding: 1.5em;
+  border-radius: 0px 0px 5px 5px;
+  h3 {
+    font-family: $body-font;
+    color: $my-white;
+  }
+  p {
+    flex: 1 0 auto;
+    font-family: $body-font;
+    font-size: 15px;
+    color: $my-white;
+    text-align: justify;
+    letter-spacing: 1px;
+  }
+}
 
-      background-color: $card-background;
-      border: $card-border-width solid $card-border-color;
-      border-radius: $card-radius;
-    }
-
-      .card_image {
-        img {
-          // width: 100%;
-          // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-          // border: 1px 1px 0px 0px solid rgba(0, 0, 0, 0.1);
-          // border-radius: 5px 5px 0px 0px;
-          // -webkit-filter: brightness(1.5) contrast(1.4) hue-rotate(450deg); /* Safari 6.0 - 9.0 */
-          // filter: brightness(1.5) contrast(1.4) hue-rotate(450deg);
-        }
-      }
-
-      .card_content {
-        display: flex;
-        flex: 1 0 auto;
-        flex-direction: column;
-        // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        border: 0px 1px 1px 1px solid rgba(0, 0, 0, 0.1);
-        margin-top: -60px;
-        padding: 1.5em;
-        border-radius: 0px 0px 5px 5px;
-
-        h3 {
-          font-family: $body-font;
-          color: $my-white;
-
-        }
-
-        p {
-          flex: 1 0 auto;
-          font-family: $body-font;
-          font-size: 15px;
-          color: $my-white;
-          text-align: justify;
-          letter-spacing: 1px;
-        }
-
-      }
+// * {
+//     background: #000 !important;
+//     color: #0f0 !important;
+//     outline: solid #f00 1px !important;
+// }
