responsive home :) finaly

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -91,12 +91,9 @@ font-weight: bold;
 
 
 
-.container-call-action-2 {
+.home-cta {
   margin-top: 50px;
   margin-bottom: 50px;
-  .form {
-    text-align: justify;
-  }
 }
 
 
