--- a/app/assets/stylesheets/coworkings/_show_coworking.scss
+++ b/app/assets/stylesheets/coworkings/_show_coworking.scss
@@ -30,6 +30,27 @@
   }
 }
 
+.special-offer {
+  padding: 0px 15px 0px 15px;
+  text-transform: bold;
+  background-color: #F48024;
+  border-radius: 10px;
+  text-align: center;
+  margin-top: 15px;
+  h4 {
+    color: white;
+    padding-top: 5px;
+  }
+    i {
+      font-size: 20px;
+  }
+  p {
+    color: white;
+    font-size: 12px;
+    padding-bottom: 5px;
+  }
+}
+
 .box-infos-price {
   background: white;
   padding: 20px 40px;
@@ -39,18 +60,6 @@
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   text-align: center;
-  h4 {
-    font-size: 20px;
-    color: #EC5123;
-    margin-top: 30px;
-    i {
-      font-size: 20px;
-    }
-  }
-  p {
-    font-family: "Montserrat-light", sans-serif;
-    font-size: 12px;
-  }
 }
 
 .box-infos {
