--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -1,55 +1,84 @@
-<!-- Carousel image up to 6 add condition if more images -->
-<div id="carousel-example-generic" class="carousel slide carousel-top-link center-block" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="0" class="active"></li>
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="1"></li>
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="2"></li>
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="3"></li>
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="4"></li>
-    <li data-target=".carousel slide carousel-top-link" data-slide-to="5"></li>
-  </ol>
+      <div id="carousel-example-generic" class="carousel slide carousel-top-link center-block" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="0" class="active"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="1"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="2"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="3"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="4"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="5"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="6"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="7"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="8"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="9"></li>
+          <li data-target=".carousel slide carousel-top-link" data-slide-to="10"></li>
+        </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <%= cl_image_tag @coworking.photos[0].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <div class="item">
-      <%= cl_image_tag @coworking.photos[1].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <% if @coworking.photos.count > 2 %>
-    <div class="item">
-      <%= cl_image_tag @coworking.photos[2].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <% end %>
-    <% if @coworking.photos.count > 3 %>
-    <div class="item">
-      <%= cl_image_tag @coworking.photos[3].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <% end %>
-    <% if @coworking.photos.count > 4 %>
-    <div class="item">
-      <%= cl_image_tag @coworking.photos[4].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <% end %>
-    <% if @coworking.photos.count > 5 %>
-    <div class="item">
-      <%= cl_image_tag @coworking.photos[5].path, aspect_ratio: 4, crop: :crop, class: "img-responsive center-block" %>
-    </div>
-    <% end %>
-  </div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <%= cl_image_tag @coworking.photos[0].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[1].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% if @coworking.photos.count > 2 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[2].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 3 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[3].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 4 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[4].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 5 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[5].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 6 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[6].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 7 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[7].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 8 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[8].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 9 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[9].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+          <% if @coworking.photos.count > 10 %>
+          <div class="item">
+            <%= cl_image_tag @coworking.photos[10].path, width: 600, crop: :scale, class: "img-responsive center-block" %>
+          </div>
+          <% end %>
+        </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
 <!-- Content of the offer -->
 
@@ -58,20 +87,24 @@
     <div class="col-xs-12 col-sm-4 col-md-3">
       <div class="box-infos-price">
         <h2 class="highlight"><%= humanized_money_with_symbol(@coworking.price_per_month) %> /mois</h2>
-  <%= form_tag(new_user_session_path, method: :get, class: 'form-search-coworking-show') do %>
-  <div class="flexbox">
-    <%= submit_tag "Demander un devis", class: "btn btn-primary btn-devis", style:"text-decoration:none" %>
-  </div>
-  <% end %>
-  <i>Dernière mise à jour <%= @coworking.updated_at %></i>
-  <h4><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> Offre spéciale</h4>
-  <% if  @coworking.special_offer == ""%>
-  <p>Il n'y a pas d'offres en ce moment mais vous pouvez créer un compte pour être informé de toutes les offres à venir</p>
-  <% else %>
-  <p><%= @coworking.special_offer %></p>
-  <% end %>
-</div>
-</div>
+        <%= form_tag(new_user_session_path, method: :get, class: 'form-search-coworking-show') do %>
+        <div class="flexbox">
+          <%= submit_tag "Demander un devis", class: "btn btn-primary btn-devis", style:"text-decoration:none" %>
+        </div>
+        <% end %>
+        <i>Dernière mise à jour <%= @coworking.updated_at.strftime("%-d-%-m-%Y") %></i>
+      </div>
+    </div>
+
+      <div class="col-xs-12 col-sm-6 col-sm-offset-1 col-md-6">
+        <div class="special-offer">
+          <% if @coworking.special_offer.blank?%>
+          <% else %>
+          <h4><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> Offre exceptionnelle</h4>
+          <p><%= @coworking.special_offer %></p>
+          <% end %>
+        </div>
+      </div>
 <div class="col-xs-12 col-sm-8 col-md-9">
   <div class="box-infos">
     <h1 class="highlight-coworking-show"><%= @coworking.title %></h1>
