row padding and margin left/right set to 0px

--- a/app/assets/stylesheets/shared/_all_pages.scss
+++ b/app/assets/stylesheets/shared/_all_pages.scss
@@ -5,3 +5,10 @@
 body {
  background-color: $my-white;
 }
+
+.row {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
