--- a/app/assets/stylesheets/coworkings/_coworking-list.scss
+++ b/app/assets/stylesheets/coworkings/_coworking-list.scss
@@ -4,3 +4,9 @@
   width: 100%;
   height: 100vh;
 }
+
+// * {
+//     background: #000 !important;
+//     color: #0f0 !important;
+//     outline: solid #f00 1px !important;
+// }
