--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -96,8 +96,36 @@
 
 .form-search-banner {
   text-align: center;
-  // margin-top: 50px;
 }
+
+
+
+// @media(max-width: 350px) {
+//   .search-query {
+//      color: $my-gray;
+//      font-size: 10px;
+//      padding-left: 5px;
+//      border: 1px gray solid;
+//      border-radius: 5px 0 0 5px;
+//      height: 45px;
+//      width: 200px;
+//    }
+//    .btn-search {
+//     background-color: #29AB87;
+//     border-color: #29AB87;
+//     font-size: 10px;
+//     width: auto;
+//     margin-left: -6px;
+//     height: 45px;
+//     padding: 0px 10px;
+//     border: 1px gray solid;
+//     border-radius: 0 5px 5px 0;
+//     font-family: "Montserrat", "sans-serif";
+//     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+//     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//   }
+// }
 
 .search-query {
    color: $my-gray;
