--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
-<div id="home-footer">
+<div class="home-footer">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <%= link_to root_path, class: "footer-logo hidden-xs" do %>
-          <%= image_tag "TREJhome.png" %>
-        <% end %>
-      </div>
        <!--  <div class="row"> -->
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-4 col-sm-4">
+            <%= link_to root_path, class: "footer-logo hidden-xs" do %>
+              <%= image_tag "TREJhome.png" %>
+            <% end %>
+          </div>
+          <div class="col-xs-12 col-md-4 col-sm-4">
             <ul class="list-inline text-center">
               <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
               </li>
@@ -17,7 +17,7 @@
               </li>
             </ul>
           </div>
-       <!--  </div> -->
+      <!--   </div> -->
         <div class="row">
           <div class="col-xs-12">
           <p class="text-center">©TheRealEstateJungle</p>
