--- a/app/assets/stylesheets/shared/_all_pages.scss
+++ b/app/assets/stylesheets/shared/_all_pages.scss
@@ -12,3 +12,14 @@ body {
   margin-left: 0px;
   margin-right: 0px;
 }
+
+.container {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
