--- a/app/views/demands/new.html.erb
+++ b/app/views/demands/new.html.erb
@@ -25,13 +25,13 @@
         </div>
         <h2>Où souhaitez-vous vous implanter ?</h2>
         <div class="row">
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <%= f.input :location_1, label: "Choix n°1", prompt: "Où ?", collection: Demand::ZONE, error: "Merci de remplir ce champs pour valider le formulaire" %>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <%= f.input :location_2, label: "Choix n°2", collection: Demand::ZONE %>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <%= f.input :location_3, label: "Choix n°3", collection: Demand::ZONE %>
           </div>
             <%= f.hint "Merci d'indiquer au moins un choix - choix n°1" %>
