--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -26,7 +26,7 @@
           <br>
           <br>
           Le paysage de l’immobilier de bureaux est en mutation, les travailleurs, qu’ils soient au sein d’une startup, collaborateurs d’une grande entreprise ou encore indépendants, poussent de plus en plus les professionnels de l’immobilier à créer des espaces adaptés avec des engagements flexibles.
-          Ces nouveaux codes nécessitent une compréhension claire des différentes alternatives quant à la prise à bail de locaux ou la signature d'un contrat de prestations de services. En effet l’immobilier est l’un des premiers coûts d’une entreprise, est stratégique pour le confort et la pruductivité des collaborateurs et peut être essentiel concernant le développement des affaires.
+          Ces nouveaux codes nécessitent une compréhension claire des différentes alternatives quant à la prise à bail de locaux ou la signature d'un contrat de prestations de services. En effet l’immobilier est l’un des premiers coûts d’une entreprise, est stratégique pour le confort et la productivité des collaborateurs et peut être essentiel concernant le développement des affaires.
           <br>
           <br>
           Aujourd’hui il n’existe pas de cabinet de conseil ayant la capacité et la volonté d’accompagner les startups et les grands groupes dans la recherche de la solution immobilière la plus adaptée à leurs besoins.</p>
@@ -48,7 +48,7 @@
             <br>
             Cette approche par coût complet permet d’avoir une vision claire des futures dépenses en immobilier, permettant aux chefs d’entreprises de prendre les bonnes décisions. Elle permet aussi de négocier au plus juste avec les propriétaires immobiliers ou les espaces de Coworking. </p>
             <h2>Pourquoi le nom The Real Estate Jungle ?</h2>
-            <p>Par métaphore la jungle représente le marché de l’immobilier d’entreprise. Il est rare de s’aventurer dans une jungle tropicale sans un guide. The Real Estate Jungle propose d’être ce guide dans la jungle urbaine. En effet l’immobilier d’entreprise est luxuriant et possède une multitude de types de bureaux et d’espaces de Coworking. En Sanskrit (origine du mot jungle) Jangala désigne des espaces non mis en valeur, nous souhaitons pouvoir mettre en valeur les espaces de travail en les sélectionnant de manière pragmatique et réfléchie tout en négociant les meilleures conditions. </p>
+            <p>Par métaphore la jungle représente le marché de l’immobilier d’entreprise. Il est rare de s’aventurer dans une jungle tropicale sans un guide. The Real Estate Jungle propose d’être ce guide dans la jungle urbaine. En effet l’immobilier d’entreprise est luxuriant et possède une multitude de types de bureaux et d’espaces de Coworking. En Sanskrit Jangala (origine du mot jungle) désigne des espaces non mis en valeur, nous souhaitons pouvoir mettre en valeur les espaces de travail en les sélectionnant de manière pragmatique et réfléchie tout en négociant les meilleures conditions. </p>
           </div>
         </div>
       </div>
