--- a/app/views/coworkings/edit.html.erb
+++ b/app/views/coworkings/edit.html.erb
@@ -99,8 +99,12 @@
                </div>
             </div>
         <h2>Description de l'espace</h2>
-        <!-- Inject categories here -->
-        <%= f.input :description, label: "Détails", placeholder: "Entièrement rénové avec une belle hauteur sous plafond...", hint: "Vous pouvez préciser d'autres services s'ils ne figurent pas dans les choix proposés. Nous vous conseillons de prendre le temps de décrire vos services. Vous pouvez faire la différence :)" %>
+        <h2>Description de l'espace</h2>
+          <div class="row">
+            <div class="col-xs-12">
+              <%= f.input :description, label: "Détails", placeholder: "Entièrement rénové avec une belle hauteur sous plafond...", hint: "Vous pouvez préciser d'autres services s'ils ne figurent pas dans les choix proposés. Nous vous conseillons de prendre le temps de décrire vos services. Vous pouvez faire la différence :)" %>
+            </div>
+          </div>
         <h2>Offres spéciales</h2>
         <div class="row">
           <div class="col-xs-12">
