--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -45,9 +45,8 @@
   <div class="row">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="demand-user-infos">
-      <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/50x50" %>
-      <%= image_tag avatar_url, class: "demands-picture" %>
-        <%#= image_tag current_user.facebook_picture_url, class: "demands-picture" %>
+        <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/50x50" %>
+        <%= image_tag avatar_url, class: "demands-picture" %>
         <h2><%= current_user.first_name %> <%= current_user.last_name %></h2>
         <p><%= current_user.email %></p>
       </div>
@@ -59,78 +58,104 @@
   <div class="row">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="demands-content">
-        <div>
-          <h1><%= demand.company_name %></h1>
-          <i>Dernière mise à jour: <%= demand.updated_at %></i>
-          <ul>
-            <h2>Type d'occupation</h2>
-            <% if demand.lease == true%>
-            <p>
-              Location avec un budget de <strong><%= demand.lease_budget %> euros HT HC</strong>
-            </p>
-            <% end %>
-            <% if demand.buy == true%>
-            <p>
-              Achat avec un budget de <strong><%= demand.buy_budget %> euros HD</strong>
-            </p>
-            <% end %>
-            <h2>Localisation</h2>
-            <p>Les quartiers qui m'intéressent :
-              <ol>
-                <li><%= demand.location_1 %></li>
-                <% if demand.location_2.blank?%>
-                <% else %>
-                <li><%= demand.location_2 %></li>
-                <% end %>
-                <% if demand.location_3.blank?%>
-                <% else %>
-                <li><%= demand.location_3 %></li>
-                <% end %>
-              </ol>
-              <h2>Critères de recherche</h2>
+        <h1><%= demand.company_name %></h1>
+        <i>Dernière mise à jour le <%= demand.updated_at.strftime("%-d-%-m-%Y") %></i>
+        <ul>
+          <% unless demand.occupations.blank? %>
+          <h2>Type d'occupation</h2>
+          <% demand.occupations.each do |occupation| %>
+          <div class="row">
+            <div class="col-xs-12">
               <ul>
-                <p>Surface : <strong><%= demand.surface %></strong> m2 SUBL</p>
-                <p>Nombre de postes de travail : <strong><%= demand.workstation_number %></strong></p>
-                <p>Nombre de salles de réunions : <strong><%= demand.meeting_room_number %></strong></p>
-                <% if demand.parking_number.blank? %>
-                <% else %>
-                <p>Nombre de parkings : <strong><%= demand.parking_number %></strong></p>
-                <% end %>
-                <p>Type de surface : <strong><%= demand.surface_type %></strong></p>
-                <p>Date d'emménagement souhaitée : <strong><%= demand.move_in_date %></strong></p>
-              </ul>
-              <% if demand.other_spec.blank? %>
-              <% else %>
-              <h2>Besoins spécifiques</h2>
-              <p><%= demand.other_spec %></p>
+                <li>
+                 <strong><%= occupation.name %></strong>
+               </li>
+             </ul>
+           </div>
+           <% end %>
+         </div>
+         <% end %>
+         <h2>Budget</h2>
+          <div class="row">
+           <div class="col-xs-12">
+             <p>Location : <strong><%= number_with_delimiter(demand.lease_budget) %></strong><em> € HC HT / an</em></p>
+             <% unless demand.buy_budget.blank? %>
+              <p>Achat : <strong><%= number_with_delimiter(demand.buy_budget) %></strong><em> € HD</em></p>
+             <% end %>
+           </div>
+         </div>
+         <h2>Localisation</h2>
+         <div class="row">
+          <div class="col-xs-12">
+            <ul>
+              <li><%= demand.location_1 %></li>
+              <% unless demand.location_2.blank?%>
+              <li><%= demand.location_2 %></li>
               <% end %>
-              <div>
-              <ul class="list-inline">
+              <% unless demand.location_3.blank?%>
+              <li><%= demand.location_3 %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+        <h2>Critères de recherche</h2>
+        <div class="row">
+          <div class="col-xs-12">
+            <p>Surface : <strong><%= demand.surface %></strong><em> m² SUBL</em></p>
+            <p>Nombre de postes de travail : <strong><%= demand.workstation_number %></strong></p>
+            <p>Nombre de salles de réunions : <strong><%= demand.meeting_room_number %></strong></p>
+            <% unless demand.parking_number.blank? %>
+            <p>Nombre de parkings : <strong><%= demand.parking_number %></strong></p>
+            <% end %>
+          </div>
+        </div>
+        <% unless demand.surfaces.blank? %>
+        <h2>Type d'espace</h2>
+        <% demand.surfaces.each do |surface| %>
+        <div class="row">
+          <div class="col-xs-12">
+            <ul>
               <li>
+                <strong> <%= surface.name %></strong> - <em><%= surface.space %></em>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <% end %>
+        <% end %>
+        <h2>Agenda</h2>
+        <div class="row">
+          <div class="col-xs-12">
+            <p><strong><%= demand.move_in_date %></strong></p>
+          </div>
+        </div>
+        <% unless demand.other_spec.blank? %>
+        <h2>Besoins spécifiques</h2>
+        <p><%= demand.other_spec %></p>
+        <% end %>
+        <div>
+          <ul class="list-inline">
+            <li>
               <div>
-              <%= link_to edit_user_demand_path(demand.user_id, demand), method: :get, class: 'form-search-demands' do %>
-
+                <%= link_to edit_demand_path(demand), method: :get, class: 'form-search-demands' do %>
                 <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall-demands", style:"text-decoration:none" %>
-
-              <% end %>
+                <% end %>
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
               <div>
-              <%= link_to user_demand_path(demand.user_id, demand), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre recherche ?"}, class: 'form-search-demands' do %>
-
+                <%= link_to demand_path(demand), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre recherche ?"}, class: 'form-search-demands' do %>
                 <%= submit_tag "SUPPRIMER", class: "btn btn-primary btn-recall-demands-delete", style:"text-decoration:none" %>
-
-              <% end %>
+                <% end %>
               </div>
-              </li>
-              </ul>
-              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
-    <%end %>
-    <% end %>
+</div>
+<% end %>
+<% end %>
 
