edit without odl password confirmation

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
 
           <%= f.input :password, autocomplete: "off", label: "Mot de passe", hint: "Laissez blanc si vous ne souhaitez pas changer votre mot de passe", required: false %>
           <%= f.input :password_confirmation, label: "Confirmez votre mot de passe", required: false %>
-          <%= f.input :current_password, label: "Mot de passe actuel", hint: "Nous avons besoin de votre mot de passe actuel pour procéder aux modifications", required: true %>
+          <%#= f.input :current_password, label: "Mot de passe actuel", hint: "Nous avons besoin de votre mot de passe actuel pour procéder aux modifications", required: false %>
         </div>
 
         <div class="form-actions">
